# HeuristicLab

./: .gitignore  Build.cmd  Build.ps1  Clean.cmd  FxCop.cmd  HeuristicLab 3.3 Hive.Slave.sln  HeuristicLab 3.3 Services.sln  HeuristicLab 3.3 Services.vsmdi  HeuristicLab 3.3 Tests.sln  HeuristicLab 3.3.sln  HeuristicLab 3.3.sln.DotSettings  HeuristicLab.ExtLibs.sln  MergeConfigs.cmd  MergeConfigs.sh  PreBuildEvent.cmd  PreBuildEvent.sh  Test.cmd  prepareProjectsForMono.sh
.nuget/: NuGet.targets
HeuristicLab.Algorithms.ALPS/3.3/: AgingScheme.cs  AlpsGeneticAlgorithm.cs  AlpsGeneticAlgorithmMainLoop.cs  (+14 more)
HeuristicLab.Clients.Hive.Slave.TrayIconSetup/: HeuristicLab.Clients.Hive.Slave.TrayIconSetup.vdproj
HeuristicLab.Clients.Hive.Slave.WindowsServiceSetup/: HeuristicLab.Clients.Hive.Slave.WindowsServiceSetup.vdproj
HeuristicLab.ExtLibs/HeuristicLab.NativeInterpreter/0.1/NativeInterpreter-0.1/: .ycm_extra_conf.py  CMakeLists.txt  README.md
HeuristicLab.ExtLibs/HeuristicLab.NativeInterpreter/0.1/NativeInterpreter-0.1/lib/vdt/: asin.h  atan.h  atan2.h  cos.h  exp.h  inv.h  log.h  sin.h  sqrt.h  stdwrap.h  tan.h  tanh.h  vdtMath.h  vdtcore_common.h
HeuristicLab.ExtLibs/HeuristicLab.NativeInterpreter/0.1/NativeInterpreter-0.1/src/: instruction.h  interpreter.cpp  interpreter.h  vector_operations.h
HeuristicLab.Services.Hive.JanitorServiceSetup/: HeuristicLab.Services.Hive.JanitorServiceSetup-3.3.vdproj  ICSharpCode.SharpZipLib License.txt
HeuristicLab.Services.Hive.Web/: web_services.config
HeuristicLab.Tests/: AssemblyInitializer.cs  Branches Builder.testsettings  Builder.testsettings  HeuristicLab.Tests.csproj  TestRandom.cs  app.config
Installers/: HiveJanitorServiceInstaller.nsi  HiveSlaveInstaller.nsi
(+6694 files in other folders)
